Huge code clean up and refactoring (more to follow)